--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Website to showcase my learning of HTML">
         <title>Nico's Website</title>
     </head>
-    <body style="background-color:white;">
+    <body style="background-color:black;">
         <header>
             <h1 style="color:orangered;">Nico's Website</h1>
             <hr/><hr/>
