--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Nico's Code Blog</title>
+        <link rel="stylesheet" href="blog.css">
     </head>
     <body>
         <h1>Nico's Code Blog</h1>
