--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>The Life of Nico</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Nicolas(Nico) Haralambidis</h1>
