--- a/blog.html
+++ b/blog.html
@@ -4,12 +4,14 @@
         <meta charset="utf-8">
         <title>Nico's Code Blog</title>
         <link rel="stylesheet" href="blog.css">
+        <script src="index.js"></script>
     </head>
     <body>
         <h1>Nico's Code Blog</h1>
-        <a href="index.html">Link back to index.html</a>
+        <a id="clickBack" href="index.html"></a>
+        <button onclick="clickBack()">Link back to Home Page</button>
         <hr>
-        <h3>Entry 1: 4/2/2022</h3>
+        <h2>Entry 1: 4/2/2022</h2>
         <p>The only problem that I encountered when working on this project was trying to add a photo of myself to the webpage. I wasn't sure if the photo needed to be on the web or not but I just tried a few different things and figured out that you can just link to the photo if it is in the working directory.</p>
         <p>I already knew the basics of HTML before starting this assigment, but I definitely needed a refresher which this assingment helped with. I learned some different tags in this assignment and I also learned how to actually publish a website for anyone to use.</p>
         <p>I used the class notes as a resource for this assignment because they are very easy to follow and have just the right information that I needed for this assignment.</p>
