--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
         <meta charset="utf-8">
         <title>The Life of Nico</title>
         <link rel="stylesheet" href="index.css">
+        <script src="index.js"></script>
     </head>
     <body>
         <h1>Nicolas(Nico) Haralambidis</h1>
         <h2>haralamn@oregonstate.edu</h2>
         <h3>Major: Computer Science Year 2</h3>
-        <a href="blog.html">Link to my code blog</a>
+        <a id="clickTo" href="blog.html"></a>
+        
+        <button onclick="clickTo()">Link to my Code Blog</button> 
+        
+
         <ul>
             <li>The most conplex thing I have done with my current web development skills is creating a simple blackjack application using html and javascript.</li>
             <li>I hope to learn more about web development in general and build the foundation of the skills I will be using in the foreseeable future.</li>
