--- a/blog.html
+++ b/blog.html
@@ -14,9 +14,9 @@
         <hr>
         <h2>Entry 1: 4/2/2022</h2>
         <p>The only problem that I encountered when working on this project was trying to add a photo of myself to the webpage. I wasn't sure if the photo needed to be on the web or not but I just tried a few different things and figured out that you can just link to the photo if it is in the working directory.</p>
-        <p>I already knew the basics of HTML before starting this assigment, but I definitely needed a refresher which this assingment helped with. I learned some different tags in this assignment and I also learned how to actually publish a website for anyone to use.</p>
-        <p>I used the class notes as a resource for this assignment because they are very easy to follow and have just the right information that I needed for this assignment.</p>
-        <p>Overall, this was a really fun assignment and I am excited to see what we will work on next!
+        <p>I already knew the basics of HTML before starting this project, but I definitely needed a refresher which this assignment helped with. I've learned some different tags and I also learned how to actually publish a website for anyone to use.</p>
+        <p>I used the class notes as a resource for this assignment because they are very easy to follow and have just the right information that I needed to get it done.</p>
+        <p>Overall, this was a really fun project and I am excited to see what we will work on next!
         </p>
         <hr>
     </body>
