--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button onclick="clickTo()">Link to my Code Blog</button> 
         
         <ul>
-            <li>The most complex thing I have done with my current web development skills is creating a simple blackjack application using html and javascript.</li>
+            <li>The most complex thing I have done with my current web development skills is creating a simple blackjack application using HTML and Javascript.</li>
             <li>I hope to learn more about web development in general and build the foundation of the skills I will be using in the foreseeable future.</li>
             <li>I have signed up for our Campuswire forum and I intend on using it very much throughout this term.</li>
         </ul>
