added blog entry 2

--- a/blog.html
+++ b/blog.html
@@ -13,11 +13,24 @@
         
         <hr>
         <h2>Entry 1: 4/2/2022</h2>
-        <p>The only problem that I encountered when working on this project was trying to add a photo of myself to the webpage. I wasn't sure if the photo needed to be on the web or not but I just tried a few different things and figured out that you can just link to the photo if it is in the working directory.</p>
-        <p>I already knew the basics of HTML before starting this project, but I definitely needed a refresher which this assignment helped with. I've learned some different tags and I also learned how to actually publish a website for anyone to use.</p>
-        <p>I used the class notes as a resource for this assignment because they are very easy to follow and have just the right information that I needed to get it done.</p>
-        <p>Overall, this was a really fun project and I am excited to see what we will work on next!
+        <p>
+            The only problem that I encountered when working on this project was trying to add a photo of myself to the webpage.
+            I wasn't sure if the photo needed to be on the web or not but I just tried a few different things and figured out that you can just link to the photo if it is in the working directory.
+            I already knew the basics of HTML before starting this project, but I definitely needed a refresher which this assignment helped with. 
+            I've learned some different tags and I also learned how to actually publish a website for anyone to use.
+            I used the class notes as a resource for this assignment because they are very easy to follow and have just the right information that I needed to get it done.
+            Overall, this was a really fun project and I am excited to see what we will work on next!
         </p>
         <hr>
+        <h2>Entry 2: 4/25/2022</h2>
+        <p>
+            The challenging parts of this assignment were trying to get the padding and margins as close to the mocks as possible as well as positioning the elements in the right way. 
+            I was able to solve these problems by just trying different things until I eventually got everything to look the way I wanted.
+            I learned a ton from this assignment. By spending time tinkering with different elements over and over, I now have a much better understanding of CSS and feel more comfortable using it.
+            The recorded lectures and lecture notes are what I used to keep me on track for this project. I used the lectures when I needed to recall a specific topic we went over in class and I used the notes as a general cheat sheet while working.
+            One thing that I had to google when working on this assignment was how to implement the pseudo-class for focus because I didn't know what it was called. 
+        </p>
+        <hr>
+
     </body>
 </html>
