added code blog 3

--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,15 @@
             One thing that I had to google when working on this assignment was how to implement the pseudo-class for focus because I didn't know what it was called. 
         </p>
         <hr>
+        <h2>Entry 3: 05/09/2022</h2>
+        <p>
+            This assignment was definitely the hardest so far, but at the end of the day I really enjoyed it. I learned the basics of JavaScript
+            and I now have a foundation to build on in the future. Some problems I had include trying to delete elements from the DOM while still having
+            a saved copy of them to use later in the program as well as handling new twits in the DOM. The site that helped me the most for this project
+            was the MDN documentation website. It gave me the syntax that I needed when I got stuck with examples to help me understand. One thing I had to
+            google for this assignment was how to remove elements from an array at once. All in all, this was a fun project that I would like to build upon.
+        </p>
+        <hr>
 
     </body>
 </html>
