added code blog 4

--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,16 @@
             google for this assignment was how to remove elements from an array at once. All in all, this was a fun project that I would like to build upon.
         </p>
         <hr>
+        <h2>Entry 4: 05/16/2022</h2>
+        <p>
+            The difficult parts of this assignment include figuring out how to set up the files correctly so that the styles would show.
+            Also, making sure the content types were set the right way gave me some trouble at first. I learned valuable information about
+            servers from this assignment and I can now build off of this project to make it more complex. The resources that were helpful for
+            this assignment were the recorded lectures as well as the Campuswire forum. Using the lecture code as reference helped me stay on
+            track and Campuswire was there when I had more specific questions. One thing I had to google was the different content types to make
+            sure I was using the right ones. 
+        </p>
+        <hr>
 
     </body>
 </html>
