added code blog 5

--- a/blog.html
+++ b/blog.html
@@ -50,6 +50,17 @@
             sure I was using the right ones. 
         </p>
         <hr>
+        <h2>Entry 5: 05/31/2022</h2>
+        <p>
+            This assignment was pretty difficult to understand at first, but after going through the material and documentation it started to make more sense as 
+            I went on. A specific problem that I encountered include getting my directories set up in a way that express handlebars would understand which took
+            some time to understand. I learned a ton from this assignment although a lot of it was hard to understand at first but I am glad that I pushed through
+            because the stuff that I learned is valuable and can definitely be used in the future for other projects. The resources that were helpful for
+            this assignment were the recorded lectures as well as the Campuswire forum. Using the lecture code as reference helped me stay on
+            track and Campuswire was there when I had more specific questions much like the other assignments. One thing that I had to google to complete this assignment
+            was the handlebars helpers documentation because I needed to add an if helper and wanted to make sure I had the syntax correct so that I didn't run into any
+            problems.
+        </p>
 
     </body>
 </html>
