--- a/blog.html
+++ b/blog.html
@@ -1,66 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Nico's Code Blog</title>
-        <link rel="stylesheet" href="blog.css">
-        <script src="index.js"></script>
-    </head>
-    <body>
-        <h1>Nico's Code Blog</h1>
-        <a id="clickBack" href="index.html"></a>
-        <button onclick="clickBack()">Link back to Home Page</button>
-        
-        <hr>
-        <h2>Entry 1: 4/2/2022</h2>
-        <p>
-            The only problem that I encountered when working on this project was trying to add a photo of myself to the webpage.
-            I wasn't sure if the photo needed to be on the web or not but I just tried a few different things and figured out that you can just link to the photo if it is in the working directory.
-            I already knew the basics of HTML before starting this project, but I definitely needed a refresher which this assignment helped with. 
-            I've learned some different tags and I also learned how to actually publish a website for anyone to use.
-            I used the class notes as a resource for this assignment because they are very easy to follow and have just the right information that I needed to get it done.
-            Overall, this was a really fun project and I am excited to see what we will work on next!
-        </p>
-        <hr>
-        <h2>Entry 2: 4/25/2022</h2>
-        <p>
-            The challenging parts of this assignment were trying to get the padding and margins as close to the mocks as possible as well as positioning the elements in the right way. 
-            I was able to solve these problems by just trying different things until I eventually got everything to look the way I wanted.
-            I learned a ton from this assignment. By spending time tinkering with different elements over and over, I now have a much better understanding of CSS and feel more comfortable using it.
-            The recorded lectures and lecture notes are what I used to keep me on track for this project. I used the lectures when I needed to recall a specific topic we went over in class and I used the notes as a general cheat sheet while working.
-            One thing that I had to google when working on this assignment was how to implement the pseudo-class for focus because I didn't know what it was called. 
-        </p>
-        <hr>
-        <h2>Entry 3: 05/09/2022</h2>
-        <p>
-            This assignment was definitely the hardest so far, but at the end of the day I really enjoyed it. I learned the basics of JavaScript
-            and I now have a foundation to build on in the future. Some problems I had include trying to delete elements from the DOM while still having
-            a saved copy of them to use later in the program as well as handling new twits in the DOM. The site that helped me the most for this project
-            was the MDN documentation website. It gave me the syntax that I needed when I got stuck with examples to help me understand. One thing I had to
-            google for this assignment was how to remove elements from an array at once. All in all, this was a fun project that I would like to build upon.
-        </p>
-        <hr>
-        <h2>Entry 4: 05/16/2022</h2>
-        <p>
-            The difficult parts of this assignment include figuring out how to set up the files correctly so that the styles would show.
-            Also, making sure the content types were set the right way gave me some trouble at first. I learned valuable information about
-            servers from this assignment and I can now build off of this project to make it more complex. The resources that were helpful for
-            this assignment were the recorded lectures as well as the Campuswire forum. Using the lecture code as reference helped me stay on
-            track and Campuswire was there when I had more specific questions. One thing I had to google was the different content types to make
-            sure I was using the right ones. 
-        </p>
-        <hr>
-        <h2>Entry 5: 05/31/2022</h2>
-        <p>
-            This assignment was pretty difficult to understand at first, but after going through the material and documentation it started to make more sense as 
-            I went on. A specific problem that I encountered include getting my directories set up in a way that express handlebars would understand which took
-            some time to understand. I learned a ton from this assignment although a lot of it was hard to understand at first but I am glad that I pushed through
-            because the stuff that I learned is valuable and can definitely be used in the future for other projects. The resources that were helpful for
-            this assignment were the recorded lectures as well as the Campuswire forum. Using the lecture code as reference helped me stay on
-            track and Campuswire was there when I had more specific questions much like the other assignments. One thing that I had to google to complete this assignment
-            was the handlebars helpers documentation because I needed to add an if helper and wanted to make sure I had the syntax correct so that I didn't run into any
-            problems.
-        </p>
 
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Nico's Code Blog</title>
+    <link rel="stylesheet" href="blog.css">
+    <script src="index.js"></script>
+</head>
+
+<body>
+    <h1>Nico's Code Blog</h1>
+    <div id="btnWrapper">
+        <a id="homeLink" href="index.html">Home</a>
+    </div>
+    <hr>
+    <h2>Entry 1: 4/2/2022</h2>
+    <p>
+        The only problem that I encountered when working on this project was trying to add a photo of myself to the
+        webpage.
+        I wasn't sure if the photo needed to be on the web or not but I just tried a few different things and figured
+        out that you can just link to the photo if it is in the working directory.
+        I already knew the basics of HTML before starting this project, but I definitely needed a refresher which this
+        assignment helped with.
+        I've learned some different tags and I also learned how to actually publish a website for anyone to use.
+        I used the class notes as a resource for this assignment because they are very easy to follow and have just the
+        right information that I needed to get it done.
+        Overall, this was a really fun project and I am excited to see what we will work on next!
+    </p>
+    <hr>
+    <h2>Entry 2: 4/25/2022</h2>
+    <p>
+        The challenging parts of this assignment were trying to get the padding and margins as close to the mocks as
+        possible as well as positioning the elements in the right way.
+        I was able to solve these problems by just trying different things until I eventually got everything to look the
+        way I wanted.
+        I learned a ton from this assignment. By spending time tinkering with different elements over and over, I now
+        have a much better understanding of CSS and feel more comfortable using it.
+        The recorded lectures and lecture notes are what I used to keep me on track for this project. I used the
+        lectures when I needed to recall a specific topic we went over in class and I used the notes as a general cheat
+        sheet while working.
+        One thing that I had to google when working on this assignment was how to implement the pseudo-class for focus
+        because I didn't know what it was called.
+    </p>
+    <hr>
+    <h2>Entry 3: 05/09/2022</h2>
+    <p>
+        This assignment was definitely the hardest so far, but at the end of the day I really enjoyed it. I learned the
+        basics of JavaScript
+        and I now have a foundation to build on in the future. Some problems I had include trying to delete elements
+        from the DOM while still having
+        a saved copy of them to use later in the program as well as handling new twits in the DOM. The site that helped
+        me the most for this project
+        was the MDN documentation website. It gave me the syntax that I needed when I got stuck with examples to help me
+        understand. One thing I had to
+        google for this assignment was how to remove elements from an array at once. All in all, this was a fun project
+        that I would like to build upon.
+    </p>
+    <hr>
+    <h2>Entry 4: 05/16/2022</h2>
+    <p>
+        The difficult parts of this assignment include figuring out how to set up the files correctly so that the styles
+        would show.
+        Also, making sure the content types were set the right way gave me some trouble at first. I learned valuable
+        information about
+        servers from this assignment and I can now build off of this project to make it more complex. The resources that
+        were helpful for
+        this assignment were the recorded lectures as well as the Campuswire forum. Using the lecture code as reference
+        helped me stay on
+        track and Campuswire was there when I had more specific questions. One thing I had to google was the different
+        content types to make
+        sure I was using the right ones.
+    </p>
+    <hr>
+    <h2>Entry 5: 05/31/2022</h2>
+    <p>
+        This assignment was pretty difficult to understand at first, but after going through the material and
+        documentation it started to make more sense as
+        I went on. A specific problem that I encountered include getting my directories set up in a way that express
+        handlebars would understand which took
+        some time to understand. I learned a ton from this assignment although a lot of it was hard to understand at
+        first but I am glad that I pushed through
+        because the stuff that I learned is valuable and can definitely be used in the future for other projects. The
+        resources that were helpful for
+        this assignment were the recorded lectures as well as the Campuswire forum. Using the lecture code as reference
+        helped me stay on
+        track and Campuswire was there when I had more specific questions much like the other assignments. One thing
+        that I had to google to complete this assignment
+        was the handlebars helpers documentation because I needed to add an if helper and wanted to make sure I had the
+        syntax correct so that I didn't run into any
+        problems.
+    </p>
+
+</body>
+
 </html>
