--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>The Life of Nico</title>
-        <link rel="stylesheet" href="index.css">
-        <script src="index.js"></script>
-    </head>
-    <body>
-        <h1>Nicolas(Nico) Haralambidis</h1>
-        <h2>haralamn@oregonstate.edu</h2>
-        <h3>Major: Computer Science Year 2</h3>
-        <a id="clickTo" href="blog.html"></a>
-        <button onclick="clickTo()">Link to my Code Blog</button> 
-        
-        <ul>
-            <li>The most complex thing I have done with my current web development skills is creating a simple blackjack application using HTML and Javascript.</li>
-            <li>I hope to learn more about web development in general and build the foundation of the skills I will be using in the foreseeable future.</li>
-            <li>I have signed up for our Campuswire forum and I intend on using it very much throughout this term.</li>
-        </ul>
-        <p>The most interesting fact about myself is that I broke the same arm twice within the same year.</p>
-        <img src="me.jpg" alt="A picture of myself" style="width:500px;height:600px;">
-        <!-- <iframe frameborder=0 height=100% width=100% src="http://weakstreams.com/streams/10247297" allowfullscreen scrolling=no allowtransparency></iframe> -->
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>The Life of Nico</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+</head>
+
+<body>
+    <h1>Nicolas(Nico) Haralambidis</h1>
+    <h2>haralamn@oregonstate.edu</h2>
+    <h3>Major: Computer Science Year 2</h3>
+    <div id="btnWrapper">
+        <a id="blogLink" href="blog.html">Code Blog</a>
+    </div>
+    <ul>
+        <li>The most complex thing I have done with my current web development skills is creating a simple blackjack
+            application using HTML and Javascript.</li>
+        <li>I hope to learn more about web development in general and build the foundation of the skills I will be using
+            in the foreseeable future.</li>
+        <li>I have signed up for our Campuswire forum and I intend on using it very much throughout this term.</li>
+    </ul>
+    <p>The most interesting fact about myself is that I broke the same arm twice within the same year.</p>
+    <div id="imgWrapper">
+        <img src="me.jpg" alt="A picture of myself">
+    </div>
+</body>
+
 </html>
