update year and embed Spotify playlist

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Nicolas(Nico) Haralambidis</h1>
     <h2>haralamn@oregonstate.edu</h2>
-    <h3>Major: Computer Science Year 2</h3>
+    <h3>Major: Computer Science Year 4</h3>
     <div id="btnWrapper">
         <a id="blogLink" href="blog.html">Code Blog</a>
     </div>
@@ -23,6 +23,11 @@
         <li>I have signed up for our Campuswire forum and I intend on using it very much throughout this term.</li>
     </ul>
     <p>The most interesting fact about myself is that I broke the same arm twice within the same year.</p>
+    <h3 style="margin-left: 1rem; float: left;">Check out my Spotify playlist!</h3>
+    <div style="height: 4rem;"></div>
+    <div id="spotifyWrapper">
+        <iframe src="https://open.spotify.com/embed/playlist/1u1KpJr5rcHEK4gjTkRXWI?utm_source=generator" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
     <div id="imgWrapper">
         <img src="me.jpg" alt="A picture of myself">
     </div>
