--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h3 style="margin-left: 1rem; float: left;">Check out my Spotify playlist!</h3>
     <div style="height: 4rem;"></div>
     <div id="spotifyWrapper">
-        <iframe src="https://open.spotify.com/embed/playlist/1u1KpJr5rcHEK4gjTkRXWI?utm_source=generator" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe src="https://open.spotify.com/embed/playlist/1u1KpJr5rcHEK4gjTkRXWI?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
     <div id="imgWrapper">
         <img src="me.jpg" alt="A picture of myself">
