--- a/index.html
+++ b/index.html
@@ -3,34 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-    <title>The Life of Nico</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Nico Haralambidis</title>
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
     <script src="index.js"></script>
 </head>
 
 <body>
-    <h1>Nicolas(Nico) Haralambidis</h1>
-    <h2>haralamn@oregonstate.edu</h2>
-    <h3>Major: Computer Science Year 4</h3>
-    <div id="btnWrapper">
-        <a id="blogLink" href="blog.html">Code Blog</a>
-    </div>
-    <ul>
-        <li>The most complex thing I have done with my current web development skills is creating a simple blackjack
-            application using HTML and Javascript.</li>
-        <li>I hope to learn more about web development in general and build the foundation of the skills I will be using
-            in the foreseeable future.</li>
-        <li>I have signed up for our Campuswire forum and I intend on using it very much throughout this term.</li>
-    </ul>
-    <p>The most interesting fact about myself is that I broke the same arm twice within the same year.</p>
-    <h3 style="margin-left: 1rem; float: left;">Check out my Spotify playlist!</h3>
-    <div style="height: 4rem;"></div>
-    <div id="spotifyWrapper">
-        <iframe src="https://open.spotify.com/embed/playlist/1u1KpJr5rcHEK4gjTkRXWI?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </div>
-    <div id="imgWrapper">
-        <img src="me.jpg" alt="A picture of myself">
-    </div>
+    <nav class="navbar">
+        <ul>
+            <li><a class="active" href="./">Home</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <main class="content">
+        <h1>Nicolas (Nico) Haralambidis</h1>
+        <h2>haralambidis.nico@gmail.com</h2>
+        <div id="imgWrapper">
+            <img src="./assets/me.jpg" alt="A picture of myself">
+        </div>
+    </main>
+    <script src="index.js"></script>
 </body>
 
 </html>
