--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Nico Haralambidis</title>
+    <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/navbar.css">
     <style>
@@ -27,7 +28,7 @@
             <img src="./assets/me.jpg" alt="A picture of myself">
         </div>
     </main>
-    <script src="index.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
