--- a/projects.html
+++ b/projects.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/projects.css">
     <link rel="stylesheet" href="./styles/navbar.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Projects</title>
 </head>
 <body>
@@ -18,5 +20,25 @@
             <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
+    <main>
+        <div class="wrapper">
+            <div class="projects">
+                <div class="project" id="wumpus">
+                    <div class="textContainer">
+                        <h3>Hunt the Wumpus</h3>
+                        <p>
+                            Developed an implementation of the classic 'Hunt the Wumpus' game in C++.
+                            Utilized object-oriented programming principles to structure the game logic,
+                            employed text-based visualization for the cave system, and incorporated
+                            basic game mechanics to create an interactive user experience.
+
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+    <script src="./scripts/projects.js"></script>
 </body>
 </html>
