add minecraft project

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,16 @@
                         </p>
                     </div>
                 </div>
+                <div class="project" id="minecraft">
+                    <div class="textContainer">
+                        <h3>Minecraft Server Automation</h3>
+                        <p>
+                            Developed infrastructure provisioning scripts to automate the creation
+                            and deployment of a Minecraft server on AWS using Terraform, Ansible,
+                            and Bash.
+                        </p>
+                    </div>
+                </div>
             </div>
 
         </div>
