--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Nicolas (Nico) Haralambidis</h1>
         <h2>haralambidis.nico@gmail.com</h2>
         <div id="imgWrapper">
-            <img src="./assets/me.jpg" alt="A picture of myself">
+            <img src="./assets/nico.jpg" alt="A picture of myself">
         </div>
     </main>
     <script src="./scripts/index.js"></script>
