--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Projects</title>
 </head>
+
 <body>
     <nav class="navbar">
         <ul>
@@ -23,15 +25,14 @@
     <main>
         <div class="wrapper">
             <div class="projects">
-                <div class="project" id="wumpus">
+                <div class="project" id="edir">
                     <div class="textContainer">
-                        <h3>Hunt the Wumpus</h3>
+                        <h3>EDIR Webpage</h3>
                         <p>
-                            Developed an implementation of the classic 'Hunt the Wumpus' game in C++.
-                            Utilized object-oriented programming principles to structure the game logic,
-                            employed text-based visualization for the cave system, and incorporated
-                            basic game mechanics to create an interactive user experience.
-
+                            Developed a functional, responsive website for a client, following
+                            detailed mockups provided by a co-worker. Implemented the website using HTML, CSS, and
+                            JavaScript. After thorough testing and feedback, successfully deployed the website to
+                            Drupal, making it accessible on the internet.
                         </p>
                     </div>
                 </div>
@@ -45,10 +46,22 @@
                         </p>
                     </div>
                 </div>
+                <div class="project" id="wumpus">
+                    <div class="textContainer">
+                        <h3>Hunt the Wumpus</h3>
+                        <p>
+                            Developed an implementation of the classic 'Hunt the Wumpus' game in C++.
+                            Utilized object-oriented programming principles to structure the game logic,
+                            employed text-based visualization for the cave system, and incorporated
+                            basic game mechanics to create an interactive user experience.
+                        </p>
+                    </div>
+                </div>
             </div>
 
         </div>
     </main>
     <script src="./scripts/projects.js"></script>
 </body>
+
 </html>
