add new project

--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,16 @@
                         </p>
                     </div>
                 </div>
+                <div class="project" id="tv">
+                    <div class="textContainer">
+                        <h3>TV Review Application</h3>
+                        <p>
+                            Currently developing an application that allows users to rate and track their favorite TV
+                            shows. Technologies used include React, API communication, MySQL, AWS, and Emotion for
+                            styling.
+                        </p>
+                    </div>
+                </div>
                 <div class="project" id="wumpus">
                     <div class="textContainer">
                         <h3>Hunt the Wumpus</h3>
