--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/contact.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
     <title>Contact</title>
 </head>
+
 <body>
     <nav class="navbar">
         <ul>
@@ -19,5 +22,25 @@
             <li><a class="active" href="./contact.html">Contact</a></li>
         </ul>
     </nav>
+    <main>
+        <div class="wrapper">
+            <h3>Nicolas(Nico) Haralambidis</h3>
+
+            <p>
+                <strong>Email: </strong>
+                <a href="mailto:haralambidis.nico@gmail.com">haralambidis.nico@gmail.com</a>
+            </p>
+            <p>
+                <strong>LinkedIn: </strong>
+                <a href="https://www.linkedin.com/in/nicolas-haralambidis/">nicolas-haralambidis</a>
+            </p>
+            <p>
+                <strong>GitHub: </strong>
+                <a href="https://github.com/niclbody13">niclbody13</a>
+            </p>
+
+        </div>
+    </main>
 </body>
+
 </html>
