update contact styles

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/ebc4bd39db.js" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
 
@@ -27,15 +28,15 @@
             <h3>Nicolas(Nico) Haralambidis</h3>
 
             <p>
-                <strong>Email: </strong>
+                <i class="fa-solid fa-envelope"></i>
                 <a href="mailto:haralambidis.nico@gmail.com">haralambidis.nico@gmail.com</a>
             </p>
             <p>
-                <strong>LinkedIn: </strong>
+                <i class="fa-brands fa-linkedin"></i>
                 <a href="https://www.linkedin.com/in/nicolas-haralambidis/">nicolas-haralambidis</a>
             </p>
             <p>
-                <strong>GitHub: </strong>
+                <i class="fa-brands fa-github"></i>
                 <a href="https://github.com/niclbody13">niclbody13</a>
             </p>
 
