--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/contact.css">
     <style>
@@ -27,18 +26,24 @@
         <div class="wrapper">
             <h3>Nicolas(Nico) Haralambidis</h3>
 
-            <p>
-                <i class="fa-solid fa-envelope"></i>
-                <a href="mailto:haralambidis.nico@gmail.com">haralambidis.nico@gmail.com</a>
-            </p>
-            <p>
-                <i class="fa-brands fa-linkedin"></i>
-                <a href="https://www.linkedin.com/in/nicolas-haralambidis/">nicolas-haralambidis</a>
-            </p>
-            <p>
-                <i class="fa-brands fa-github"></i>
-                <a href="https://github.com/niclbody13">niclbody13</a>
-            </p>
+            <div>
+                <a href="mailto:haralambidis.nico@gmail.com">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+                <p class="contactInfo">haralambidis.nico@gmail.com</p>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/nicolas-haralambidis/">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <p class="contactInfo">nicolas-haralambidis</p>
+            </div>
+            <div>
+                <a href="https://github.com/niclbody13">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <p class="contactInfo">niclbody13</p>
+            </div>
 
         </div>
     </main>
