--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,7 @@
     </nav>
     <main>
         <div class="wrapper">
-            <h3>Nicolas(Nico) Haralambidis</h3>
-
+            <h3>Nicolas Haralambidis</h3>
             <div>
                 <a href="mailto:haralambidis.nico@gmail.com">
                     <i class="fa-solid fa-envelope"></i>
@@ -44,7 +43,6 @@
                 </a>
                 <p class="contactInfo">niclbody13</p>
             </div>
-
         </div>
     </main>
 </body>
