add additional information

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/ebc4bd39db.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </head>
 
@@ -23,10 +24,29 @@
         </ul>
     </nav>
     <main class="content">
-        <h1>Nicolas (Nico) Haralambidis</h1>
-        <h2>haralambidis.nico@gmail.com</h2>
-        <div id="imgWrapper">
-            <img src="./assets/nico.jpg" alt="A picture of myself">
+        <div>
+            <h1>Nicolas (Nico) Haralambidis</h1>
+            <div id="imgWrapper">
+                <img src="./assets/nico.jpg" alt="A picture of myself">
+            </div>
+        </div>
+        <div class="textBox">
+            <p>
+                Aspiring computer science professional with a strong academic foundation and hands-on experience in software
+                development, seeking an entry-level position to leverage programming skills, problem-solving abilities, and
+                passion for technology in a dynamic and innovative company.
+            </p>
+            <div class="techStack">
+                <p>Tech stack</p>
+                <span>|</span>
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-js"></i>
+                <i class="fa-brands fa-react"></i>
+                <i class="fa-brands fa-drupal"></i>
+                <i class="fa-brands fa-node"></i>
+                <i class="fa-brands fa-git"></i>
+            </div>
         </div>
     </main>
     <script src="./scripts/index.js"></script>
