--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <i class="fa-brands fa-js"></i>
                 <i class="fa-brands fa-react"></i>
                 <i class="fa-brands fa-drupal"></i>
+                <i class="fa-brands fa-aws"></i>
                 <i class="fa-brands fa-node"></i>
                 <i class="fa-brands fa-git"></i>
             </div>
