--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                         <h3>TV Review Application</h3>
                         <p>
                             Currently developing an application that allows users to rate and track their favorite TV
-                            shows. Technologies used include React, API communication, MySQL, AWS, and Emotion for
+                            shows. Technologies used include React, API communication, AWS, and Emotion for
                             styling.
                         </p>
                     </div>
