update TV Review project

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                     <div class="textContainer">
                         <h3>TV Review Application</h3>
                         <p>
-                            Currently developing an application that allows users to rate and track their favorite TV
+                            Developed an application that allows users to rate and track their favorite TV
                             shows. Technologies used include React, API communication, AWS, and Emotion for
                             styling.
                         </p>
