add information on how to view project text

--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
+    <script src="https://kit.fontawesome.com/ebc4bd39db.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Projects</title>
 </head>
@@ -51,7 +52,8 @@
                         <h3>TV Review Application</h3>
                         <p>
                             Developed an application that allows users to rate and track their favorite TV
-                            shows. Technologies used include React, AWS Cognito, DynamoDB, API communication, and Emotion for
+                            shows. Technologies used include React, AWS Cognito, DynamoDB, API communication, and
+                            Emotion for
                             styling.
                         </p>
                     </div>
@@ -70,6 +72,10 @@
             </div>
 
         </div>
+        <footer>
+            <i class="fa-solid fa-circle-info"></i>
+            Swipe up on a card to view more text
+        </footer>
     </main>
     <script src="./scripts/projects.js"></script>
 </body>
