add new project (Star Wars Database)

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,18 @@
     <main>
         <div class="wrapper">
             <div class="projects">
+                <div class="project" id="starWarsWiki">
+                    <div class="textContainer">
+                        <h3>Star Wars Database</h3>
+                        <p>
+                            Created a multi-page React application that utilizes React Router
+                            for seamless navigation between movies, characters, and planets, using dynamic routing
+                            and locally stored JSON data derived from the Star Wars API. This app features
+                            state management with React hooks, and a structured component-based architecture to simulate
+                            a real-world API-driven project.
+                        </p>
+                    </div>
+                </div>
                 <div class="project" id="edir">
                     <div class="textContainer">
                         <h3>EDIR Webpage</h3>
