add new project (Redux Shopping App)

--- a/projects.html
+++ b/projects.html
@@ -38,14 +38,25 @@
                         </p>
                     </div>
                 </div>
-                <div class="project" id="edir">
+                <div class="project" id="reduxShoppingApp">
                     <div class="textContainer">
-                        <h3>EDIR Webpage</h3>
+                        <h3>Redux Shopping App</h3>
                         <p>
-                            Developed a functional, responsive website for a client, following
-                            detailed mockups provided by a co-worker. Implemented the website using HTML, CSS, and
-                            JavaScript. After thorough testing and feedback, successfully deployed the website to
-                            Drupal, making it accessible on the internet.
+                            React-based candy shopping app that leverages Redux to manage state, allowing users to browse a selection of
+                            candies, add products to their shopping cart, and complete purchases. The app grabs the product data using
+                            the fetch() API and maintains the inventory in the Redux store. When a user 'buys' the items
+                            in their cart, the app updates the store's inventory accordingly, reflecting the reduced stock.
+                        </p>
+                    </div>
+                </div>
+                <div class="project" id="tv">
+                    <div class="textContainer">
+                        <h3>TV Review Application</h3>
+                        <p>
+                            Developed an application that allows users to rate and track their favorite TV
+                            shows. Technologies used include React, AWS Cognito, DynamoDB, API communication, and
+                            Emotion for
+                            styling.
                         </p>
                     </div>
                 </div>
@@ -59,14 +70,14 @@
                         </p>
                     </div>
                 </div>
-                <div class="project" id="tv">
+                <div class="project" id="edir">
                     <div class="textContainer">
-                        <h3>TV Review Application</h3>
+                        <h3>EDIR Webpage</h3>
                         <p>
-                            Developed an application that allows users to rate and track their favorite TV
-                            shows. Technologies used include React, AWS Cognito, DynamoDB, API communication, and
-                            Emotion for
-                            styling.
+                            Developed a functional, responsive website for a client, following
+                            detailed mockups provided by a co-worker. Implemented the website using HTML, CSS, and
+                            JavaScript. After thorough testing and feedback, successfully deployed the website to
+                            Drupal, making it accessible on the internet.
                         </p>
                     </div>
                 </div>
