--- a/contact.html
+++ b/contact.html
@@ -4,161 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelBloom</title>
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/contact.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
+    <script src="https://kit.fontawesome.com/ebc4bd39db.js" crossorigin="anonymous"></script>
+    <title>Contact</title>
 </head>
 
 <body>
-    <div class="outerContainer">
-        <h3>TravelBloom</h3>
-        <nav>
-            <a href="travel_recommendation.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact Us</a>
-        </nav>
-    </div>
-    <h1 class="contactHeader">Contact Us</h1>
-    <p class="getInTouchText">Get in touch</p>
-    <form class="contactForm">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Enter Your Name">
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Enter Your Email">
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" placeholder="Enter Your Message"></textarea>
-
-        <button type="submit">Submit</button>
-    </form>
-    <style>
-        body {
-            background-image: url("https://plus.unsplash.com/premium_photo-1694475411899-ebbce0efaf75?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8bmV3JTIweW9yayUyMGNpdHklMjB3YWxscGFwZXJ8ZW58MHx8MHx8fDA%3D");
-            background-size: cover;
-        }
-
-        body,
-        h1,
-        h2,
-        h3,
-        p {
-            margin: 0;
-            color: white;
-        }
-
-        a {
-            text-decoration: none;
-            color: white;
-            font-size: 1.25rem;
-        }
-
-        h3 {
-            position: absolute;
-            left: 0;
-        }
-
-        .textContainer {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            height: 100vh;
-            text-align: left;
-            gap: 2rem;
-            padding-left: 2rem;
-        }
-
-        p {
-            width: 12rem;
-        }
-
-        .textContainer p,
-        h1 {
-            background-color: rgba(0, 0, 0, 0.5);
-            border-radius: 10px;
-            padding: 0.5rem;
-        }
-
-        .outerContainer {
-            display: flex;
-            background-color: rgba(0, 0, 0, 0.3);
-            padding: 1rem 0;
-            position: relative;
-            justify-content: center;
-        }
-
-        button {
-            padding: .25rem;
-            background-color: teal;
-            border: none;
-            border-radius: 5px;
-            margin: 0 0.25rem;
-        }
-
-        .inputContainer {
-            position: absolute;
-            right: 0;
-        }
-
-        .contactHeader {
-            position: absolute;
-            top: 50%;
-            left: 2rem;
-            transform: translateY(-50%);
-            font-size: 4rem;
-            color: white;
-        }
-
-        .getInTouchText {
-            position: absolute;
-            top: 60%;
-            left: 2rem;
-            transform: translateY(-50%);
-            font-size: 2rem;
-            color: white;
-        }
-
-        .contactForm {
-            position: absolute;
-            top: 50%;
-            right: 2rem;
-            transform: translateY(-50%);
-            display: flex;
-            justify-content: space-evenly;
-            flex-direction: column;
-            gap: 1rem;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 1rem;
-            border-radius: 10px;
-            color: white;
-            width: 50rem;
-            height: 30rem;
-        }
-
-        .contactForm label {
-            font-size: 1rem;
-        }
-
-        .contactForm input,
-        .contactForm textarea {
-            width: 100%;
-            padding: 0.5rem;
-            border: none;
-            border-radius: 5px;
-        }
-
-        .contactForm button {
-            padding: 0.5rem;
-            background-color: teal;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .contactForm button:hover {
-            background-color: darkcyan;
-        }
-    </style>
+    <nav class="navbar">
+        <ul>
+            <li><a href="./">Home</a></li>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a class="active" href="./contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="wrapper">
+            <h3>Nicolas Haralambidis</h3>
+            <div>
+                <a href="mailto:haralambidis.nico@gmail.com">
+                    <i class="fa-solid fa-envelope"></i>
+                    <p class="contactInfo">haralambidis.nico@gmail.com</p>
+                </a>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/nicolas-haralambidis/">
+                    <i class="fa-brands fa-linkedin"></i>
+                    <p class="contactInfo">nicolas-haralambidis</p>
+                </a>
+            </div>
+            <div>
+                <a href="https://github.com/niclbody13">
+                    <i class="fa-brands fa-github"></i>
+                    <p class="contactInfo">niclbody13</p>
+                </a>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
