--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="about.html">About Us</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="contact_us.html">Contact Us</a>
         </nav>
         <div class="inputContainer">
             <input type="text">
