--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="travel_recommendation.html">Home</a>
             <a href="about.html">About Us</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="contact_us.html">Contact Us</a>
         </nav>
     </div>
     <h1 class="aboutHeader">About Us</h1>
